--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -1,25 +1,26 @@
 <div class="show-mobile">
   <div>
     <button (click)="toggleMenu()">
-      <img src="./assets/svg/icon_menu.svg" alt="menu">
+      <img src="./assets/svg/icon_menu.svg" alt="menu" />
     </button>
     <a href="">
-      <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
+      <img src="./assets/svg/logo_yard_sale.svg" alt="logo" />
     </a>
     <div class="cart">
       <a href="">
-        <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
+        <img src="./assets/svg/icon_shopping_cart.svg" alt="logo" />
       </a>
       <span class="counter">{{ counter }}</span>
     </div>
-
   </div>
   <div class="side-menu" [class.active]="activeMenu">
     <button (click)="toggleMenu()">Close</button>
     <ul>
       <li><a routerLinkActive="active" routerLink="home">All</a></li>
       <li *ngFor="let item of categories">
-        <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{ item.name }}</a>
+        <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{
+          item.name
+        }}</a>
       </li>
     </ul>
   </div>
@@ -28,18 +29,25 @@
   <div>
     <nav>
       <a class="logo" href="">
-        <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
+        <img src="./assets/svg/logo_yard_sale.svg" alt="logo" />
       </a>
       <ul>
         <li><a routerLinkActive="active" routerLink="home">All</a></li>
         <li *ngFor="let item of categories">
-          <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{ item.name }}</a>
+          <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{
+            item.name
+          }}</a>
         </li>
       </ul>
     </nav>
     <div class="info">
       <div class="account">
-        <button *ngIf="!profile; else elseBlock" (click)="login()">Login</button>
+        <div *ngIf="!profile; else elseBlock">
+          <button (click)="login()">
+            Login
+          </button>
+          <a routerLink="/register">Register</a>
+        </div>
         <ng-template #elseBlock>
           <a routerLink="/profile">{{ profile?.email }}</a>
           <button (click)="logout()">Logout</button>
@@ -47,7 +55,7 @@
       </div>
       <div class="cart">
         <a href="">
-          <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
+          <img src="./assets/svg/icon_shopping_cart.svg" alt="logo" />
         </a>
         <span class="counter">{{ counter }}</span>
       </div>
